# unified-mcp

./: .env.example  .flake8  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  server.py  setup.sh  test_all_capabilities.py  test_browser_bing.py  test_context7.py  test_graphiti_gemini.py  test_mcp.py
.github/workflows/: docker.yml  test.yml
capabilities/graphiti_ladybug/: README.md
config/: catalog.yaml
core/: __init__.py  capability_loader.py  dynamic_registry.py  progressive_discovery.py
examples/: 01_progressive_discovery.py  02_multi_capability.py  README.md
handlers/: __init__.py  browser_automation.py  code_understanding.py  documentation.py  knowledge_graph.py  memory_search.py
tests/: conftest.py
tests/e2e/: test_mcp_server.py
tests/integration/: __init__.py  test_codanna_handler.py  test_context7_handler.py  test_graphiti_handler.py  test_memory_search_handler.py  test_playwright_handler.py
tests/unit/: test_dynamic_registry.py  test_progressive_discovery.py
